src/app/shared/service/fixtures/plan-details-data.ts
import {OASuggestedData} from '../../domain/OASuggestedData';

export function planDetailsData() {
  return [{
    name: 'planNameNew',
    key: '',
    status: 'planStatus',
    planCompleted: true,
    action: 'planAction',
    corpName: null,
    planUtilizedAvgVol: 1,
    dateUpdated: null,
    departmentKey: 1,
    departmentCode: null,
    departmentName: '',
    facilityCode: null,
    facilityKey: 1,
    facilityName: '',
    deleteFlag: false,
    dailyFlag: true,
    censusRange:
      {
        minimumCensus: -1,
        maximumCensus: 5,
        censusKey: 0,
        planKey: 'planKey',
        occurrenceNumber: ['1', '2'],
        temporaryOccurrenceValue: 0,
        censusDays: 0,
      }
    ,
    effectiveStartDate: null,
    effectiveEndDate: null,
    userNotes: '1',
    upperEndTarget: 1,
    lowerEndTarget: 1,
    workHoursBalance: 1,
    hours: 1,
    fte: 2,
    volume: 1,
    targetBudget: 1,
    utilizedAverageVolume: 1,
    utilizedAverageVolumeBase: undefined,
    temporaryEffectiveStartDate: null,
    temporaryEffectiveEndDate: null,
    userKey: 1,
    isnewlycreated: false,
    variableDepartmentPositions: [{
      key: 1,
      categoryKey: 1,
      categoryAbbreviation: 'categoryAbbrev',
      categoryDescription: 'categoryDesc',
      includedInNursingHoursFlag: true
    }],
    nonVariableDepartmentPositions: [
      {
        weekDays: [{day: 'Monday', selected: true},
          {day: 'Tuesday', selected: false},
          {day: 'Wednesday', selected: false},
          {day: 'Thursday', selected: true},
          {day: 'Friday', selected: false},
          {day: 'Saturday', selected: false},
          {day: 'Sunday', selected: false}
        ],
        shiftHours: 0,
        title: 'title',
        allDaySelected: false,
      }
    ],
    defaultPlanFlag: true,
    offGridActivities: [{
      planId: '1',
      code: '20',
      name: 'activityName',
      shiftHours: 1,
      typeKey: 1,
      variableDepartmentList: [{
        key: 1,
        categoryAbbreviation: 'variable_department_abrv',
        categoryDescription: 'variable_department_position',
        staffCount: 2,
      }],
      totalHours: 1,
      key: 1,
    }, {
      planId: '1',
      code: '2',
      name: 'activityName',
      shiftHours: 1,
      typeKey: 2,
      variableDepartmentList: [{
        key: 1,
        categoryAbbreviation: 'variable_department_abrv',
        categoryDescription: 'variable_department_position',
        staffCount: 2,
      }],
      totalHours: 1,
      key: 1,
    }, {
      planId: '1',
      code: '2',
      name: 'activityName',
      shiftHours: 1,
      typeKey: 3,
      variableDepartmentList: [{
        key: 1,
        categoryAbbreviation: 'variable_department_abrv',
        categoryDescription: 'variable_department_position',
        staffCount: 2,
      }],
      totalHours: 1,
      key: 1,
    }, {
      planId: '1',
      code: '2',
      name: 'activityName',
      shiftHours: 1,
      typeKey: 4,
      variableDepartmentList: [{
        key: 1,
        categoryAbbreviation: 'variable_department_abrv',
        categoryDescription: 'variable_department_position',
        staffCount: 2,
      }],
      totalHours: 1,
      key: 1,
    }, {
      planId: '1',
      code: '2',
      name: 'activityName',
      shiftHours: 1,
      typeKey: 1,
      variableDepartmentList: [{
        key: 1,
        categoryAbbreviation: 'variable_department_abrv',
        categoryDescription: 'variable_department_position',
        staffCount: 2,
      }],
      totalHours: 1,
      key: 1,
    },
      {
        planId: '1',
        code: '2',
        name: 'activityName',
        shiftHours: 1,
        typeKey: 1,
        variableDepartmentList: [{
          key: 2,
          categoryAbbreviation: 'variable_department_abrv',
          categoryDescription: 'variable_department_position',
          staffCount: 2,
        }],
        totalHours: 1,
        key: 1,
      }, {
        planId: '1',
        code: '2',
        name: 'activityName',
        shiftHours: 1,
        typeKey: 2,
        variableDepartmentList: [{
          key: 3,
          categoryAbbreviation: 'variable_department_abrv',
          categoryDescription: 'variable_department_position',
          staffCount: 2,
        }],
        totalHours: 1,
        key: 1,
      }, {
        planId: '1',
        code: '2',
        name: 'activityName',
        shiftHours: 1,
        typeKey: 3,
        variableDepartmentList: [{
          key: 4,
          categoryAbbreviation: 'variable_department_abrv',
          categoryDescription: 'variable_department_position',
          staffCount: 2,
        }],
        totalHours: 1,
        key: 1,
      }, {
        planId: '1',
        code: '2',
        name: 'activityName',
        shiftHours: 1,
        typeKey: 4,
        variableDepartmentList: [{
          key: 5,
          categoryAbbreviation: 'variable_department_abrv',
          categoryDescription: 'variable_department_position',
          staffCount: 2,
        }],
        totalHours: 1,
        key: 1,
      },
    ],
    displayPlanStatus: '',
    corporationId: '1',
    staffScheduleList: [{
      key: '',
      name: '',
      scheduleDays: [true, true, true, true, true, true, true],
      planShiftList: [{
        key: '',
        name: '',
        hours: 0,
        timeFormatFlag: true,
        startTime: '12:00',
        staffToPatientList: [
          {
            variablePositionKey: 1,
            variablePositionCategoryAbbreviation: 'varposabrv',
            variablePositionCategoryDescription: 'varpos Dexcription',
            staffCount: 1,
            activeFlag: false
          },
          {
            variablePositionKey: 1,
            variablePositionCategoryAbbreviation: 'varposabrv',
            variablePositionCategoryDescription: 'varpos Dexcription',
            staffCount: 1,
            activeFlag: false
          }
        ],
        staffGridCensuses: [{
          key: '1',
          shiftKey: 'shiftKey',
          censusIndex: 0,
          censusValue: 0,
          productivityIndex: 0,
          totalPlanWHpU: 0,
          staffToPatientList: [{
            variablePositionKey: 2,
            variablePositionCategoryAbbreviation: '',
            variablePositionCategoryDescription: 'varpos Dexcription',
            staffCount: 0,
            activeFlag: false
          }],
        },
          {
            key: 'key',
            shiftKey: 'shiftKey',
            censusIndex: 2,
            censusValue: 1,
            productivityIndex: 0,
            totalPlanWHpU: 0,
            staffToPatientList: [{
              variablePositionKey: 2,
              variablePositionCategoryAbbreviation: '',
              variablePositionCategoryDescription: 'varpos Dexcription',
              staffCount: 0,
              activeFlag: false
            }],
          }],
        staffGrid: [
          {
            key: 0,
            staffCount: 0,
            variablePositionKey: 6,
            variablePositionCategoryDescription:'description',
            censusLookupKey: 5,
            shiftLookupKey: 3
          }
        ],
        shiftStartTime: '',
        last: false,
        HasError: false,
        errormsg: ['error'],
        activeFlag: false
      }],
      IsMaximized: false,
      HasError: false,
      errormsg: null,
      planKey: null,
    }],
    totalAnnualVolume: 0,
    totalAnnualHours: 3,
    totalAnnualHoursVariance: 0,
    currentAverageVolume: 1,
    budgetAverageVolume: 1,
    annualizedCurrentAvg: 1,
    annualizedBudgetedAvg: 1,
    updatedTimeStamp: null,
    primaryWHpU: 1,
    secondaryWHpU: 1,
    educationOrientationTargetPaid: 1,
    staffingSummaryData: [{
      census: 1,
      occ: 2,
      productivity: 3,
      varWHPU: 4,
      nonVarWHPU: 5,
      ogaWHPU: null,
      totalPlanWhpu: null,
      totalPlanDailyhrs: 20,
      dailyHrsVarToTarget: null,
      totalPlanAnnualHrs: 30,
      annualHrsVarToTarget: 40,
    }],
    planAlreadyInUse: false,
    oAStaffingMetric: null,

  }, ];
}

export function censusData()
{
  return [{
 
    isApplyButtonClicked: false,
    minimumCensus: -1,
    maximumCensus: 5,
    censusKey: 0,
    planKey: 'planKey',
    occurrenceNumber: ['1', '2'],
    temporaryOccurrenceValue: 0,
    censusDays: 0, 
}
]
}